# docs/swagger.json
@@ -246,6 +246,50 @@
                 }
             }
         },
+        "/api/products/{pid}/reviews": {
+            "get": {
+                "description": "Get Product reviews by given product ID.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Get Product reviews by a given pid",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "pid",
+                        "name": "pid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.RequestResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/server/status": {
             "get": {
                 "security": [
@@ -478,6 +522,55 @@
                     }
                 }
             }
+        },
+        "/api/users/{userid}/address": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Ger User Address.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Ger User Address",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "userid",
+                        "name": "userid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.RequestResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -532,7 +625,9 @@
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 20,
+                    "minLength": 5
                 },
                 "price": {
                     "type": "number"
@@ -542,6 +637,7 @@
                 },
                 "stockQuantity": {
                     "type": "integer",
+                    "maximum": 120,
                     "minimum": 0
                 }
             }
@@ -586,6 +682,9 @@
                     "maxLength": 30,
                     "minLength": 5
                 },
+                "discount": {
+                    "type": "number"
+                },
                 "email": {
                     "type": "string"
                 },
@@ -624,17 +723,12 @@
         },
         "request.ModifyUser": {
             "type": "object",
-            "required": [
-                "address"
-            ],
             "properties": {
                 "address": {
                     "$ref": "#/definitions/request.CreateAddressReq"
                 },
                 "telephone": {
-                    "type": "string",
-                    "maxLength": 16,
-                    "minLength": 5
+                    "type": "string"
                 },
                 "username": {
                     "type": "string",
@@ -648,11 +742,11 @@
             "properties": {
                 "code": {
                     "type": "integer",
-                    "default": 500
+                    "default": 503
                 },
                 "message": {
                     "type": "string",
-                    "default": "Something went wrong"
+                    "default": "Service unavailable"
                 },
                 "success": {
                     "type": "boolean",
